Try to fix env3.

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,5 +20,5 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        echo "PYTHONPATH=dbComparator" >> $GITHUB_ENV
+        echo "::set-env name=PYTHONPATH::home/runner/work/dbComparator"
         pylint $(git ls-files '*.py')
