--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        printenv
     - name: Analysing the code with pylint
       run: |
         echo "/home/runner/work/dbComparator" >> $GITHUB_PATH
