Try to fix env11.

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,4 +23,5 @@ jobs:
       run: |
         echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
         printenv
+        pwd
         pylint $(git ls-files '*.py')
