--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,12 +17,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install pylint
         printenv
     - name: Analysing the code with pylint
       run: |
         echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
-        printenv
-        pwd
         poetry install
         pylint $(git ls-files '*.py')
