--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pymysql = "^1.0.2"
 pyqt5 = "^5.15.7"
 sqlalchemy = "^1.4.46"
 pandas = "^1.5.3"
+pylint = "^2.15.10"
 
 
 [tool.poetry.group.dev.dependencies]
