--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pylint = "^2.15.10"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.10"
 pre-commit = "^3.0.0"
+pytest = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core"]
