Implemented loading from internal attributes to ui elements.

--- a/resources/properties/speedup.properties
+++ b/resources/properties/speedup.properties
@@ -1,9 +1,9 @@
 prod.host = eu-db-01.inventale.com
 prod.user = itest
-prod.dbt = irving_speedup
+prod.baset = irving_speedup
 test.host = eu-db-01.inventale.com
 test.user = itest
-test.db = pitt_cpopro_1269
+test.base = pitt_cpopro_1269
 only_tables = page
 skip_tables = creative_page_position,databasechangelog,download,forecaststatistics,migrationhistory,migrationhistory,mntapplog,reportinfo,synchistory,syncpersistentjob,syncstage,synctrace,synctracelink
 excluded_columns = addonFields,archived,dayOfWeekS,hourOfDayS,id,impCost
