--- a/resources/properties/sql_comparator.properties
+++ b/resources/properties/sql_comparator.properties
@@ -1,11 +1,11 @@
 prod.host = 127.0.0.1
 prod.user = root
 prod.password = RelOtUYm713
-prod.db = prod
+prod.base = prod
 test.host = 127.0.0.1
 test.user = root
 test.password = RelOtUYm713
-test.db = test
+test.base = test
 send_mail_to = pal_andreich@mail.ru
 only_tables = 
 skip_tables = databasechangelog,download,forecaststatistics,migrationhistory,migrationhistory,mntapplog,reportinfo,synchistory,syncpersistentjob,syncstage,synctrace,synctracelink
