--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ pylint = "^2.15.10"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.10"
-pre-commit = "^3.0.0"
 pytest = "^7.2.1"
 mypy = "^1.0.0"
+radon = "^5.1.0"
+pre-commit = "^3.1.1"
 
 [build-system]
 requires = ["poetry-core"]
