--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pytest = "^7.2.1"
 mypy = "^1.0.0"
 radon = "^5.1.0"
 pre-commit = "^3.1.1"
+types-pymysql = "^1.0.19.5"
+sqlalchemy = {version = "1.4.46", extras = ["mypy"]}
 
 [build-system]
 requires = ["poetry-core"]
