--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -15,10 +15,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      uses: .github/workflows/poetry.yml
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pylint
+        poetry install
     - name: Analysing the code with pylint
       run: |
         echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
