--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,8 +14,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install poetry
+      uses: .github/poetry.yml
     - name: Install dependencies
-      uses: .github/workflows/poetry.yml
       run: |
         poetry install
     - name: Analysing the code with pylint
