--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,12 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install
-        poetry init
-    # - name: Install pylint
-    #   run: |
-    #     pip install pylint
-    #     poetry init
     - name: Analysing the code with pylint
       run: |
         echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
-        pylint $(git ls-files '*.py')
+        poetry run pylint $(git ls-files '*.py')
