--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,4 +1,4 @@
-name: Old pylint
+name: Pylint
 
 on: [push]
 
@@ -9,17 +9,16 @@ jobs:
       matrix:
         python-version: ["3.10"]
     steps:
-    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: actions/checkout@v3
+    - name: Install poetry
+      uses: ./.github/
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pylint
+        poetry install
     - name: Analysing the code with pylint
       run: |
-        echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
-        pylint $(git ls-files '*.py')
+        mypy *.py --check-untyped-defs
