--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: pylint
+name: pytest
 
 on: [push]
 
@@ -22,4 +22,4 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
-        poetry run pylint $(git ls-files '*.py')
+        poetry run pytest -vv
