--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,7 +19,6 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install
-    - name: Analysing the code with pylint
+    - name: Run tests with pytest
       run: |
-        echo "/home/runner/work/dbComparator/dbComparator" >> $GITHUB_PATH
         poetry run pytest -vv
