--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,5 +21,4 @@ jobs:
         poetry install
     - name: Run tests with pytest
       run: |
-        poetry run pwd
-        poetry run pytest -vv
+        pytest -vv
