--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Install dependencies
       run: |
         poetry install
+    - name: Install pytest
+      run: |
+        pip install pytest
     - name: Run tests with pytest
       run: |
-        pytest -vv
+        python3 -m pytest -vv
