--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pyqt5 = "^5.15.7"
 sqlalchemy = "^1.4.46"
 pandas = "^1.5.3"
 pylint = "^2.15.10"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
