--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,19 @@ version: "3.9"
 services:
   comparator:
     build: .
-    ports:
-      - "3036:3036"
-  
+    depends_on:
+      - mysql
+    links:
+      - mysql
+
   mysql:
     image: "mysql"
     restart: always
-    # environment:
-    #   MYSQL_ROOT_PASSWORD: test1
+    environment:
+      MYSQL_ROOT_PASSWORD: test1
     ports:
-      - '3306:3306'
+      - '33006:3306'
     expose:
       - '3306'
-    volumes:
-      - './.mysql-data/db:/var/lib/mysql'
+    # volumes:
+    #   - './.mysql-data/db:/var/lib/mysql'
