--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^1.4.46"
 pandas = "^1.5.3"
 pylint = "^2.15.10"
 jinja2 = "^3.1.2"
+cryptography = "^3.4.8"
 
 
 [tool.poetry.group.dev.dependencies]
