--- a/resources/properties/speedup.properties
+++ b/resources/properties/speedup.properties
@@ -1,6 +1,6 @@
 prod.host = eu-db-01.inventale.com
 prod.user = itest
-prod.baset = irving_speedup
+prod.base = irving_speedup
 test.host = eu-db-01.inventale.com
 test.user = itest
 test.base = pitt_cpopro_1269
