--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -18,7 +18,7 @@ jobs:
       uses: ./.github/
     - name: Install dependencies
       run: |
-        poetry install
+        poetry install --no-root
     - name: Analysing the code with mypy
       run: |
         poetry run mypy *.py --check-untyped-defs
