--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ pymysql = "^1.1.1"
 pyqt5 = "^5.15.7"
 sqlalchemy = "^1.4.46"
 pandas = "^1.5.3"
-pylint = "^2.15.10"
+pylint = "3.3.7"
 jinja2 = "^3.1.6"
 cryptography = "^44.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
-pylint = "^2.15.10"
+pylint = "3.3.7"
 pytest = "^7.2.1"
 mypy = "^1.0.0"
 radon = "^5.1.0"
