--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,24 @@ authors = ["Pavel Kiselev <pal_andreich@mail.ru>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pymysql = "^1.1.1"
-pyqt5 = "^5.15.7"
-sqlalchemy = "^1.4.46"
-pandas = "^1.5.3"
+python = "3.12.3"
+pymysql = "1.1.1"
+pyqt5 = "5.15.11"
+sqlalchemy = "2.0.42"
+pandas = "2.3.1"
 pylint = "3.3.7"
-jinja2 = "^3.1.6"
-cryptography = "^44.0.1"
+jinja2 = "3.1.6"
+cryptography = "45.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
 pylint = "3.3.7"
-pytest = "^7.2.1"
-mypy = "^1.0.0"
-radon = "^5.1.0"
-pre-commit = "^3.1.1"
-types-pymysql = "^1.0.19.5"
-sqlalchemy = {version = "1.4.46", extras = ["mypy"]}
+pytest = "7.2.1"
+mypy = "1.0.0"
+radon = "5.1.0"
+pre-commit = "3.1.1"
+types-pymysql = "1.0.19.5"
+sqlalchemy = {version = "2.0.42", extras = ["mypy"]}
 
 [build-system]
 requires = ["poetry-core"]
