pyproject.toml rewrited to 2.3 version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,32 @@
-[tool.poetry]
+[project]
 name = "dbcomparator"
 version = "0.1.0"
 description = "Application is designed to compare relational databases"
-authors = ["Pavel Kiselev <pal_andreich@mail.ru>"]
-readme = "README.md"
+readme = {file = "README.md", content-type = "text/markdown"}
+maintainers = [
+    {name = "Pavel Kiselev", email = "pal_andreich@mail.ru"}
+]
+requires-python = ">=3.12"
+dependencies = [
+    "pymysql (==1.1.1)",
+    "pyqt5 (==5.15.11)",
+    "sqlalchemy(==2.0.42)",
+    "pandas (==2.3.1)",
+    "pylint (==3.3.7)",
+    "jinja2 (==3.1.6)",
+    "cryptography (==45.0.6)",
+    # optional below
+    "pylint (==3.3.7)",
+    "pytest (==7.2.1)",
+    "mypy (==1.0.0)",
+    "radon (==5.1.0)",
+    "pre-commit (==3.1.1)",
+    "types-pymysql (==1.0.19.5)",
+    "sqlalchemy (==2.0.42)"
+]
 
-[tool.poetry.dependencies]
-python = "3.12.3"
-pymysql = "1.1.1"
-pyqt5 = "5.15.11"
-sqlalchemy = "2.0.42"
-pandas = "2.3.1"
-pylint = "3.3.7"
-jinja2 = "3.1.6"
-cryptography = "45.0.6"
-
-
-[tool.poetry.group.dev.dependencies]
-pylint = "3.3.7"
-pytest = "7.2.1"
-mypy = "1.0.0"
-radon = "5.1.0"
-pre-commit = "3.1.1"
-types-pymysql = "1.0.19.5"
-sqlalchemy = {version = "2.0.42", extras = ["mypy"]}
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core"]
